# cat-scaling

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml  release.yml  test.yml
cat_scaling/data/: eads.py  reaction.py  species.py
cat_scaling/plotters/: volcanos.py
cat_scaling/relation/: analysis.py  builder.py  descriptors.py  relation.py
examples/: adaptive.ipynb  g-C3N4.csv  traditional.ipynb
scaling/data/: __init__.py  analysis.py  eads.py  reaction.py  species.py
scaling/plotters/: correlations.py  ptables.py  volcanos.py
scaling/relation/: __init__.py  analysis.py  builder.py  core.py  descriptors.py  relation.py
tests/data/: example_eads_data.csv  relation_data.csv  test_eads.py  test_reaction.py  test_species.py
tests/files/: g-C3N4_is.csv
tests/plotters/: test_correlations.py
tests/relation/: test_analysis.py  test_builder.py  test_descriptors.py  test_relation.py
